# serac

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .readthedocs.yml  .uberenv_config.json  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  NOTICE  README.md  astyle.cfg  azure-pipelines.yml  config-build.py  suppressions.asan  suppressions.valgrind
examples/: CMakeLists.txt  host-config.cmake.in
examples/buckling/: CMakeLists.txt  cylinder.cpp  cylinder_petsc_options.yml  petsc_options.yml
examples/contact/: CMakeLists.txt  beam_bending.cpp  ironing.cpp  ironing2.cpp  ironing2_smalldef.cpp  sphere.cpp  twist.cpp
examples/liquid_crystal_elastomer/: CMakeLists.txt  liquid_crystal_elastomer_functional.hpp  liquid_crystal_elastomer_functional_material.hpp  parameterized_liquid_crystal_elastomer_functional_material.hpp  without_input_file.cpp
examples/liquid_crystal_elastomer_mechanical/: CMakeLists.txt  without_input_file.cpp
examples/simple_conduction/: CMakeLists.txt  conduction.lua  with_input_file.cpp  without_input_file.cpp
examples/tmopWithSerac/: CMakeLists.txt  tmopWithSeracInitialTesting.cpp
examples/using-with-cmake/: CMakeLists.txt  host-config.cmake.in  serac_example.cpp
src/: CMakeLists.txt  JIT.cpp  enzyme.cpp  serac_config.hpp.in
src/boundary/: CMakeLists.txt
src/coefficients/: CMakeLists.txt  StdFunctionCoefficient.cpp  StdFunctionCoefficient.hpp  coefficient.cpp  coefficient.hpp  coefficient_extensions.cpp  coefficient_extensions.hpp  flobat_scalar_coefficient.cpp  flobat_scalar_coefficient.hpp  linear_coefficient.hpp  loading_functions.cpp  loading_functions.hpp  stdfunction_coefficient.cpp  stdfunction_coefficient.hpp  traction_coefficient.hpp  whatever_coefficient.cpp  whatever_coefficient.hpp
src/common/: CMakeLists.txt  boundary_condition.cpp  boundary_condition.hpp  boundary_condition_manager.cpp  boundary_condition_manager.hpp  common.hpp  expr_template_internal.hpp  expr_template_ops.hpp  expression_templates.hpp  finite_element_state.cpp  finite_element_state.hpp  initialize.cpp  initialize.hpp  logger.cpp  logger.hpp  mesh_utils.cpp  mesh_utils.hpp  odes.hpp  profiling.cpp  profiling.hpp  serac_types.hpp  terminator.cpp  vector_expression.hpp
src/docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt
src/docs/_static/: theme_overrides.css
src/docs/doxygen/: CMakeLists.txt  Doxyfile.in  mainpage.md
src/docs/sphinx/: CMakeLists.txt  conf.py  developer_guide.rst  docker_info.rst  environment.yml  expr_templates.rst  index.rst  input_schema.rst  logging.rst  memory_checking.rst  profiling.rst  quickstart.rst  style_guide.rst
src/drivers/: CMakeLists.txt  serac.cpp  thermal_inverse.cpp
src/infrastructure/: CMakeLists.txt  cli.cpp  cli.hpp  initialize.cpp  initialize.hpp  input.cpp  input.hpp  logger.cpp  profiling.cpp  terminator.cpp
src/integrators/: CMakeLists.txt  dg_neumann_integrator.cpp  dg_neumann_integrator.hpp  hyperelastic_traction_integrator.cpp  hyperelastic_traction_integrator.hpp  inc_hyperelastic_integrator.cpp  inc_hyperelastic_integrator.hpp  wrapper_integrator.cpp  wrapper_integrator.hpp
src/linalg/: CMakeLists.txt  backtracking_newton.cpp  backtracking_newton.hpp  linesearch_newton.cpp  linesearch_newton.hpp
src/math/: CMakeLists.txt  expr_template_internal.hpp  expr_template_ops.hpp  mesh_utils.cpp  mesh_utils.hpp  vector_expression.hpp
src/models/: CMakeLists.txt  parameters.cpp  parameters.hpp
src/numerics/: CMakeLists.txt  expr_template_internal.hpp  expr_template_ops.hpp  mesh_utils.cpp  mesh_utils.hpp  vector_expression.hpp
src/physics/: CMakeLists.txt  base_physics.cpp  base_physics.hpp  base_solver.cpp  base_solver.hpp  base_solver_refactor.cpp  elasticity.cpp  elasticity.hpp  elasticity_solver.cpp  elasticity_solver.hpp  nonlinear_solid.cpp  nonlinear_solid.hpp  nonlinear_solid_solver.cpp  nonlinear_solid_solver.hpp  nonlinear_solid_solver_previous.cpp  nonlinear_solid_solver_previous.hpp  nonlinear_solid_solver_refactor.cpp  solid.cpp  solid.hpp  thermal_conduction.cpp  thermal_conduction.hpp  thermal_solid.cpp  thermal_solid.hpp  thermal_solver.cpp  thermal_solver.hpp  thermal_solver_rework.cpp  thermal_solver_rework.hpp  thermal_structural_solver.cpp  thermal_structural_solver.hpp
src/physics/integrators/: CMakeLists.txt  displacement_hyperelastic_integrator.cpp  displacement_hyperelastic_integrator.hpp  hyperelastic_traction_integrator.cpp  hyperelastic_traction_integrator.hpp  inc_hyperelastic_integrator.cpp  inc_hyperelastic_integrator.hpp  wrapper_integrator.cpp
src/serac/: CMakeLists.txt  precompiled_headers.cpp  precompiled_headers.hpp  serac_config.hpp.in
src/solvers/: CMakeLists.txt  algebraic_solver.cpp  algebraic_solver.hpp  base_solver.cpp  base_solver.hpp  cg_convection_solver.cpp  cg_convection_solver.hpp  cg_diffusion_solver.cpp  cg_diffusion_solver.hpp  conduction_solver.cpp  conduction_solver.hpp  coupled_potential_solver.cpp  coupled_potential_solver.hpp  dg_convection_solver.cpp  dg_convection_solver.hpp  dg_diffusion_solver.cpp  dg_diffusion_solver.hpp  dynamic_solver.cpp  dynamic_solver.hpp  elasticity_solver.cpp  elasticity_solver.hpp  equation_solver.cpp  equation_solver.hpp  hyperelastic_solver.cpp  hyperelastic_solver.hpp  linear_elasticity_solver.cpp  linear_elasticity_solver.hpp  nonlinear_solid_operators.cpp  nonlinear_solid_operators.hpp  nonlinear_solid_solver.cpp  nonlinear_solid_solver.hpp  quasistatic_solver.cpp  quasistatic_solver.hpp  thermal_operators.cpp  thermal_operators.hpp  thermal_solver.cpp  thermal_solver.hpp  thermal_solver_rework.cpp  thermal_solver_rework.hpp  thermal_structural_solver.cpp  (+1 more)
src/tests/: CMakeLists.txt  axom_smoketest.cpp  copy_elision.cpp  cuda_smoketest.cpp  cuda_smoketest_kernel.cpp  hip_smoketest.cpp  mfem_array_std_algo.cpp  mfem_petsc_smoketest.cpp  mfem_slepc_smoketest.cpp  petsc_smoketest.cpp  rc_mfem_petsc_smoketest  rc_mfem_petsc_smoketest_gpu  rc_mfem_slepc_smoketest  rc_mfem_slepc_smoketest_gpu  serac_cuda_smoketest.cpp  slepc_smoketest.cpp
(+1307 files in other folders)
